Fixed issue with footer alignment

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,10 @@ footer {
     margin-right: 0;
 }
 
+#content {
+    overflow: scroll;
+}
+
 .footer {
     background: #444444;
     color: #fff;
